--- a/index.html
+++ b/index.html
@@ -93,6 +93,18 @@
             <em class="subtitle">These cover designs represent speculative work created to demonstrate technical proficiency.</em>
         </div>
     </div>
+    <section class="banner-section">
+    <div class="category">
+        <h3 style="color:#2f0f10;">Banner Design</h3>
+        <p class="subtitle">Large-scale promotional and digital banners</p>
+
+        <div class="banner-gallery">
+            <img src="kpopjiwoobanner.jpg" alt="Banner Design 1">
+            <img src="charity.jpg" alt="Banner Design 2">
+            <img src="universitybanner.jpg" alt="Banner Design 3">
+        </div>
+    </div>
+    </section>
     <div class="category">
         <h3 style="color:#2f0f10;">Many More...</h3>
         <p class="subtitle">Digital art, illustration, concept art, ++</p>
